--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -31,7 +31,7 @@ input {
 }
 
 .search-button {
-    background-image: url("/src/images/serch-icon.svg");
+    background-image: url("/src/images/search-icon.svg");
     width: 35px;
     height: 35px;
     background-repeat: no-repeat;
